zeroconf-discover: Specify the interface when connecting to a link-local IPv6 address

BugLink: https://bugs.freedesktop.org/show_bug.cgi?id=40785